--- a/.github/workflows/gcc.yml
+++ b/.github/workflows/gcc.yml
@@ -1,7 +1,11 @@
 name: GCC C CI 
 
 on: [push]
-
+permissions:
+  id-token: write
+  contents: read
+  attestations: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,4 +21,8 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
          name: mkdir
-         path: "./"
+         path: "./mkdir"
+    - name: Generate artifact attestation
+      uses: actions/attest-build-provenance@v3
+      with:
+         subject-path: './mkdir'
